--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@
 
 
                         <button type="submit" class="btn btn-primary">Submit</button>
-
-
                     </form>
-
-
-
                 </div>
             </div>
         </div>
@@ -86,6 +81,6 @@
 
 
 
-    <script src="js/script.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
